manifests/app/oci-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oci-test
spec:
  selector:
    app: oci-test
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
