manifests/app/webpages-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webpages
spec:
  selector:
    app: webpages
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
