manifests/app/oci-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oci-test
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - server2.rghf.nl
      secretName: web-tls
  rules:
    - host: server2.rghf.nl
      http:
        paths:
          - path: /oci_test
            pathType: Prefix
            backend:
              service:
                name: oci-test
                port:
                  number: 80
