manifests/app/webpages-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpages
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-live
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - fsck.me.uk
        - www.fsck.me.uk
      secretName: web-tls
  rules:
    - host: fsck.me.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webpages
                port:
                  number: 80
    - host: www.fsck.me.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webpages
                port:
                  number: 80
